crates/toml_edit/tests/snapshots/invalid/float/inf-incomplete-02.stderr
TOML parse error at line 1, column 22
  |
1 | inf-incomplete-02 = +in
  |                      ^^
invalid float, expected `inf`
